--- a/packages/tmux/.tmux.conf
+++ b/packages/tmux/.tmux.conf
@@ -1,4 +1,9 @@
-# 0 is too far from ` ;)
+# remap prefix from 'C-b' to 
+set -g prefix ²
+bind-key ² send-prefix
+unbind C-b
+
+# Start window numbering at 1
 set -g base-index 1
 
 # Automatically set window title
@@ -8,7 +13,10 @@ set-option -g set-titles on
 set -g default-terminal screen-256color
 set -g status-keys vi
 set -g history-limit 10000
+
 set -g mouse on
+set -g set-clipboard external
+bind-key -T root MouseDown2Pane run-shell -b "xclip -o | tmux load-buffer - && tmux paste-buffer"
 
 setw -g mode-keys vi
 setw -g monitor-activity on
@@ -62,5 +70,5 @@ set -g window-status-current-fg black
 set -g window-status-current-attr bold
 set -g status-interval 60
 set -g status-left-length 30
-set -g status-left '#[fg=green](#S) #(whoami)'
+set -g status-left '#[fg=green](#S) #(whoami) '
 set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
