Use template as much as possible

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,4 +3,8 @@
 [defaults]
 host_key_checking = False
 callback_whitelist = profile_tasks, timer
-ansible_managed = {file} LAST MODIFIED ON %d.%^b.%Y %H:%M
+ansible_managed = This file is managed by https://github.com/lrobinot/dotfiles/%n
+  template: {file}
+  last updated: %d.%^b.%Y %H:%M
+  user: {uid}
+  host: {host}
