--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -9,6 +9,7 @@
         state: latest
       with_items:
         - ubuntu-mono
+      when: wsl == 0
       tags:
         - fonts
 
@@ -18,6 +19,7 @@
         state: latest
       with_items:
         - gnome-terminal
+      when: wsl == 0
       tags:
         - gnome-terminal
 
@@ -46,6 +48,7 @@
         - { key: "use-theme-transparency", value: "false" }
         - { key: "background-transparency-percent", value: "{{ 100 - terminal.background.transparency }}" }
         - { key: "custom-command", value: "'zsh'" }
+      when: wsl == 0
       tags:
         - gnome-terminal
 
@@ -55,6 +58,7 @@
         state: latest
       with_items:
         - terminator
+      when: wsl == 0
       tags:
         - terminator
 
@@ -65,6 +69,7 @@
         owner: "{{ username }}"
         group: "{{ groupname }}"
         mode: 0600
+      when: wsl == 0
       tags:
         - terminator
 
@@ -155,6 +160,7 @@
         repo: "deb [arch=amd64] https://packages.microsoft.com/repos/vscode stable main"
         state: present
         filename: vscode
+      when: wsl == 0
       tags:
         - vscode
 
@@ -164,6 +170,7 @@
         state: latest
       with_items:
         - code
+      when: wsl == 0
       tags:
         - vscode
 
@@ -177,6 +184,7 @@
       with_items:
         - settings.json
         - keybindings.json
+      when: wsl == 0
       tags:
         - vscode
 
@@ -252,5 +260,6 @@
         state: latest
       with_items:
         - wallch
-
-
+      when: wsl == 0
+      tags:
+        - wallch
