--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -23,7 +23,7 @@
       tags:
         - gnome-terminal
 
-    - name: Configure Gnome Terminal (default-size-columns)
+    - name: Configure Gnome Terminal
       become: "{{ username }}"
       dconf:
         key: "/org/gnome/terminal/legacy/profiles:/:{{ gnome_terminal_default_profile }}/{{ item.key }}"
@@ -78,6 +78,16 @@
         state: latest
       with_items:
         - tilda
+      tags:
+        - tilda
+
+    - name: "Configure Tilda (folder)"
+      file:
+        path: "{{ homedir }}/.config/tilda"
+        state: directory
+        owner: "{{ username }}"
+        group: "{{ groupname }}"
+        mode: '0700'
       tags:
         - tilda
 
@@ -304,3 +314,13 @@
       when: wsl == "0"
       tags:
         - wallch
+
+    - name: "Install SOPS"
+      get_url:
+        url: https://github.com/mozilla/sops/releases/download/3.3.0/sops-3.3.0.linux
+        dest: /usr/local/bin/sops
+        owner: root
+        group: root
+        mode: 0755
+      tags:
+        - sops
