Update version of minikube and tests on tilda styling

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,7 +3,7 @@
 [defaults]
 host_key_checking = False
 callback_whitelist = profile_tasks, timer
-ansible_managed = This file is managed by https://github.com/lrobinot/dotfiles/%n
+ansible_managed = !!!! DO NOT MODIFY BY HAND, FILE AUTOMATICALLY GENERATED !!!!%nThis file is managed by https://github.com/lrobinot/dotfiles/%n
   template: {file}
   last updated: %d.%^b.%Y %H:%M
   user: {uid}
