Use a different background color for tilda terminal

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,3 +8,7 @@ ansible_managed = !!!! DO NOT MODIFY BY HAND, FILE AUTOMATICALLY GENERATED !!!!%
   last updated: %d.%^b.%Y %H:%M
   user: {uid}
   host: {host}
+
+inventory          = inventory
+filter_plugins     = plugins/filter
+
