Add Glide & Swagger tools

--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -6,6 +6,8 @@
   become: yes
   vars:
   - go_version_expected: "go version go{{ packages.go.version }} linux/amd64"
+  - glide_version_expected: "glide version v{{ packages.glide.version }}"
+  - swagger_version_expected: "version: v{{ packages.swagger.version }}"
 
   tasks:
   - name: "fonts | Cascadia Code :: installation"
@@ -194,18 +196,19 @@
 
   - name: "kubernetes | SOPS :: installation"
     get_url:
-      url: https://github.com/mozilla/sops/releases/download/{{ packages.sops.version }}/sops-{{ packages.sops.version }}.linux
+      url: https://github.com/{{ packages.sops.repo }}/releases/download/v{{ packages.sops.version }}/sops-v{{ packages.sops.version }}.linux
       dest: /usr/local/bin/sops
       owner: root
       group: root
       mode: 0755
+      checksum: sha256:{{ packages.sops.sha256 }}
     tags:
     - kubernetes
     - sops
 
   - name: "lang | Node :: repository"
     apt_repository:
-      repo: "deb [arch=amd64] https://deb.nodesource.com/{{ packages.node.repo }} {{ ansible_distribution_release }} main"
+      repo: "deb [arch=amd64] https://deb.nodesource.com/{{ packages.node.pkg_repo }} {{ ansible_distribution_release }} main"
       state: present
       filename: nodesource
       mode: 0644
@@ -278,6 +281,76 @@
     with_items:
     - go-bin.sh
     - go-path.sh
+    tags:
+    - lang
+    - go
+
+  - name: "lang | Glide :: check"
+    command: glide --version
+    ignore_errors: yes
+    register: glide_version
+    changed_when: false
+    tags:
+    - lang
+    - go
+
+  - name: "lang | Glide :: download"
+    get_url:
+      url: https://github.com/{{ packages.glide.repo }}/releases/download/v{{ packages.glide.version }}/glide-v{{ packages.glide.version }}-linux-amd64.tar.gz
+      dest: /usr/local/src/glide{{ packages.glide.version }}-linux-amd64.tar.gz
+    when: glide_version is failed or glide_version.stdout != glide_version_expected
+    tags:
+    - lang
+    - go
+
+  - name: "lang | Glide :: temporary extraction folder"
+    tempfile:
+      state: directory
+    register: __glide_tmp
+    when: glide_version is failed or glide_version.stdout != glide_version_expected
+    tags:
+    - lang
+    - go
+
+  - name: "lang | Glide :: extraction"
+    unarchive:
+      src: /usr/local/src/glide{{ packages.glide.version }}-linux-amd64.tar.gz
+      dest: "{{ __glide_tmp.path }}"
+      copy: no
+    when: glide_version is failed or glide_version.stdout != glide_version_expected
+    tags:
+    - lang
+    - go
+
+  - name: "lang | Glide :: installation"
+    copy:
+      src: "{{ __glide_tmp.path }}/linux-amd64/glide"
+      dest: "/usr/local/bin/glide"
+      mode: 0755
+      remote_src: True
+    when: glide_version is failed or glide_version.stdout != glide_version_expected
+    tags:
+    - lang
+    - go
+
+  - name: "lang | Swagger :: check"
+    command: swagger version | head -1
+    ignore_errors: yes
+    register: swagger_version
+    changed_when: false
+    tags:
+    - lang
+    - go
+
+  - name: "lang | Swagger :: download"
+    get_url:
+      url: https://github.com/{{ packages.swagger.repo }}/releases/download/v{{ packages.swagger.version }}/swagger_linux_amd64
+      dest: /usr/local/bin/swagger
+      checksum: sha256:{{ packages.swagger.sha256 }}
+      owner: root
+      group: root
+      mode: '0755'
+    when: swagger_version is failed or swagger_version.stdout != swagger_version_expected
     tags:
     - lang
     - go
