--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,6 +8,7 @@ ansible_managed = !!!! DO NOT MODIFY BY HAND, FILE AUTOMATICALLY GENERATED !!!!%
   last updated: %d.%^b.%Y %H:%M
   user: {uid}
   host: {host}
+interpreter_python = /usr/bin/python3
 
 inventory          = inventory
 filter_plugins     = plugins/filter
